shifumi code finalisé

--- a/public/index.html
+++ b/public/index.html
@@ -12,40 +12,40 @@
     <div class="jeu">
       <div class="choix">
         <h4>Joueur</h4>
-        <div class="button btn-joueur" id="pierre">
-          <img class="img" src="./assets/img/dore-remove.png" alt="pierre" />
+        <div class="button btn-joueur" id="or">
+          <img class="img" src="./assets/img/dore-remove.png" alt="or" />
           <p>OR</p>
         </div>
-        <div class="button btn-joueur" id="feuille">
+        <div class="button btn-joueur" id="rouge">
           <img
             class="img"
             src="./assets/img/rouge-removebg-preview.png"
-            alt="feuille"
+            alt="rouge"
           />
           <p>ROUGE</p>
         </div>
-        <div class="button btn-joueur" id="ciseaux">
-          <img class="img" src="./assets/img/noir-remove.jpg" alt="ciseaux" />
+        <div class="button btn-joueur" id="noir">
+          <img class="img" src="./assets/img/noir-remove.jpg" alt="noir" />
           <p>NOIR</p>
         </div>
       </div>
 
       <div class="choix">
         <h4>Ordinateur</h4>
-        <div class="button btn-ordi" id="opierre">
-          <img class="img" src="./assets/img/dore-remove.png" alt="pierre" />
+        <div class="button btn-ordi" id="oor">
+          <img class="img" src="./assets/img/dore-remove.png" alt="or" />
           <p>Or</p>
         </div>
-        <div class="button btn-ordi" id="ofeuille">
+        <div class="button btn-ordi" id="orouge">
           <img
             class="img"
             src="./assets/img/rouge-removebg-preview.png"
-            alt="feuille"
+            alt="rouge"
           />
           <p>ROUGE</p>
         </div>
-        <div class="button btn-ordi" id="ociseaux">
-          <img class="img" src="./assets/img/noir-remove.jpg" alt="ciseaux" />
+        <div class="button btn-ordi" id="onoir">
+          <img class="img" src="./assets/img/noir-remove.jpg" alt="noir" />
           <p>NOIR</p>
         </div>
       </div>
