--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
   </head>
   <body>
     <h1>ShiFuMi</h1>
+    <div>
+      <img class="vsplay" src="./assets/img/imgvsjoueur.jpg" />
+      <img class="vsordi" src="./assets/img/imgvs11111.jpg" />
+    </div>
     <div class="jeu">
       <div class="choix">
         <h4>Joueur</h4>
