shifumi modif javascript

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
     <title>Shifumi</title>
   </head>
   <body>
-    <h1>ShiFuMi</h1>
-    <div>
+    <div id="transition">
+      <h1>ShiFuMi</h1>
       <img class="vsplay" src="./assets/img/imgvsjoueur.jpg" />
-      <img class="vsordi" src="./assets/img/imgvs11111.jpg" />
+      <img class="vsordi" src="./assets/img/imgvsordi.jpg" />
     </div>
     <div class="jeu">
       <div class="choix">
@@ -29,7 +29,7 @@
           <p>ROUGE</p>
         </div>
         <div class="button btn-joueur" id="noir">
-          <img class="img" src="./assets/img/noir-remove.jpg" alt="noir" />
+          <img class="img" src="./assets/img/noir1remove.png" alt="noir" />
           <p>NOIR</p>
         </div>
       </div>
@@ -49,7 +49,7 @@
           <p>ROUGE</p>
         </div>
         <div class="button btn-ordi" id="onoir">
-          <img class="img" src="./assets/img/noir-remove.jpg" alt="noir" />
+          <img class="img" src="./assets/img/noir1remove.png" alt="noir" />
           <p>NOIR</p>
         </div>
       </div>
@@ -66,7 +66,6 @@
       <p id="score-ordinateur">0</p>
       <div class="newR" id="reset">Nouvelle manche</div>
     </div>
-
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
