--- a/public/index.html
+++ b/public/index.html
@@ -4,68 +4,94 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Shifumi</title>
   </head>
   <body>
-    <div id="transition">
+    <div class="container-fluid">
       <h1>ShiFuMi</h1>
-      <img class="vsplay" src="./assets/img/imgvsjoueur.jpg" />
-      <img class="vsordi" src="./assets/img/imgvsordi.jpg" />
-    </div>
-    <div class="jeu">
-      <div class="choix">
-        <h4>Joueur</h4>
-        <div class="button btn-joueur" id="or">
-          <img class="img" src="./assets/img/dore-remove.png" alt="or" />
-          <p>OR</p>
+      <!-- <img class="vsplay" src="./assets/img/imgvs11111.jpg" /> -->
+      <!-- <div><img class="vsordi" src="./assets/img/imgvsordi.jpg" /></div> -->
+      <div class="row align-content-center">
+        <!-- <div class="col jeu"> -->
+        <!-- <div class="jeu">  -->
+        <div class="col-5 choix">
+          <h4>Joueur</h4>
+          <div class="button btn-joueur" id="or">
+            <img class="img" src="./assets/img/dore-remove.png" alt="or" />
+            <p>OR</p>
+          </div>
+          <div class="button btn-joueur" id="rouge">
+            <img
+              class="img"
+              src="./assets/img/rouge-removebg-preview.png"
+              alt="rouge"
+            />
+            <p>ROUGE</p>
+          </div>
+          <div class="button btn-joueur" id="noir">
+            <img class="img" src="./assets/img/noir1remove.png" alt="noir" />
+            <p>NOIR</p>
+          </div>
         </div>
-        <div class="button btn-joueur" id="rouge">
-          <img
-            class="img"
-            src="./assets/img/rouge-removebg-preview.png"
-            alt="rouge"
-          />
-          <p>ROUGE</p>
-        </div>
-        <div class="button btn-joueur" id="noir">
-          <img class="img" src="./assets/img/noir1remove.png" alt="noir" />
-          <p>NOIR</p>
+        <div class="col-5 choix">
+          <h4>Ordinateur</h4>
+          <div class="button btn-ordi" id="oor">
+            <img class="img" src="./assets/img/dore-remove.png" alt="or" />
+            <p>Or</p>
+          </div>
+          <div class="button btn-ordi" id="orouge">
+            <img
+              class="img"
+              src="./assets/img/rouge-removebg-preview.png"
+              alt="rouge"
+            />
+            <p>ROUGE</p>
+          </div>
+          <div class="button btn-ordi" id="onoir">
+            <img class="img" src="./assets/img/noir1remove.png" alt="noir" />
+            <p>NOIR</p>
+          </div>
         </div>
       </div>
+      <div class="row align-content-center">
+        <div class="action">
+          <div><p class="msg" id="message">A vous de jouer !</p></div>
+          <div class="new" id="next">Tour suivant</div>
+        </div>
 
-      <div class="choix">
-        <h4>Ordinateur</h4>
-        <div class="button btn-ordi" id="oor">
-          <img class="img" src="./assets/img/dore-remove.png" alt="or" />
-          <p>Or</p>
+        <div class="score align-content-center">
+          <div class="col-4">
+            <p class="style">Joueur</p>
+            <p id="score-joueur">0</p>
+          </div>
+          <div class="col-4">
+            <p classe="Ostyle">Ordinateur</p>
+            <p id="score-ordinateur">0</p>
+          </div>
         </div>
-        <div class="button btn-ordi" id="orouge">
-          <img
-            class="img"
-            src="./assets/img/rouge-removebg-preview.png"
-            alt="rouge"
-          />
-          <p>ROUGE</p>
-        </div>
-        <div class="button btn-ordi" id="onoir">
-          <img class="img" src="./assets/img/noir1remove.png" alt="noir" />
-          <p>NOIR</p>
+        <div class="col" id="reset">
+          <p class="newR">Nouvelle manche</p>
         </div>
       </div>
     </div>
 
-    <div class="action">
-      <p class="msg" id="message">A vous de jouer !</p>
-      <div class="new" id="next">Tour suivant</div>
-    </div>
-    <div class="score">
-      <p class="style">Joueur</p>
-      <p classe="Ostyle">Ordinateur</p>
-      <p id="score-joueur">0</p>
-      <p id="score-ordinateur">0</p>
-      <div class="newR" id="reset">Nouvelle manche</div>
-    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+      crossorigin="anonymous"
+    ></script>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
